[package]
name = "rtabby-web-api"
version = "0.4.4"
edition = "2021"

[features]
default = ["mysql", "all-login"]
dotenv = ["dep:dotenvy"]
mysql = ["diesel/mysql"]
mysql-bundle = ["mysql", "mysqlclient-sys/bundled"]
sqlite = ["diesel/sqlite"]
sqlite-bundle = ["sqlite", "libsqlite3-sys/bundled"]
third-party-login = ["dep:actix-session", "dep:tera", "dep:reqwest", "dep:actix-files"]
google-login = ["third-party-login"]
github-login = ["third-party-login"]
gitlab-login = ["third-party-login"]
microsoft-login = ["third-party-login"]
oidc-login = ["third-party-login"]
all-login = ["google-login", "github-login", "gitlab-login", "microsoft-login", "oidc-login"]

[dev-dependencies]
dotenvy = "0.15.6"

[dependencies]
env_logger = "0.11"
log = "0.4"
dotenvy = {version = "0.15", optional = true}
rustls = "0.23"
actix-web = { version = "4", features = ["rustls-0_23"]  }
actix-web-httpauth = "0.8"
actix-session = { version = "0.10", features = ["cookie-session"], optional = true }
actix-files = { version = "0.6", optional = true }
chrono = { version = "0.4", features = ["serde"] }
libsqlite3-sys = { version = "0", optional = true }
mysqlclient-sys = { version = "0", optional = true }
diesel = { version = "2", features = ["chrono", "r2d2"] }
diesel_migrations = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
uuid = { version = "1", features = ["serde", "v4"] }
tera = { version = "1", optional = true }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1.47.1", features = ["sync"] }